--- a/index.html
+++ b/index.html
@@ -109,37 +109,36 @@
             <img src="img/img30.png">
         </div>
     </section>
-    <footer>
-        <div class="menu-div">
-            <div class="menu-container">
-                <div class="menu-row-1">
-                    <div class="about">
-                        <div class="logo">
-                            <img class="logo-img" src="img/copiatek_logo1.png">
-                            <div class="logo-sub">
-                                <span>
-                                    Copiatek wants to promote a circular 
-                                    economy by having depreciated ICT 
-                                    equipment checked for reuse or 
-                                    sustainable recycling.
-                                </span>
-                            </div>
+   <footer>
+        <div class="footer-top">
+            <div class="top-container">
+                <div class="footer-info">
+                    <div class="footer-logo">
+                        <img src="img/copiatek_logo1.png">
+                    </div>
+                    <div class="footer-sub">
+                        <span>
+                            Copiatek wants to promote a circular 
+                            economy by having depreciated ICT equipment 
+                            checked for reuse or sustainable recycling.
+                        </span>
+                    </div>
+                    <div class="footer-contact">
+                        <div class="address">
+                            <i class="fa-regular fa-map"></i>
+                            <span>Televisiestraat 2e, 2525 KD Den Haag</span>
                         </div>
-                        <div class="contact">
-                            <div class="address">
-                                <i class="fa-regular fa-map"></i>
-                                <span>Televisiestraat 2e, 2525 KD Den Haag</span>
-                            </div>
-                            <div class="address">
-                                <i class="fa-solid fa-phone"></i>
-                                <span>07 021 363 12</span>
-                            </div>
-                            <div class="address">
-                                <i class="fa-regular fa-envelope"></i>
-                                <span>info@copiatek.nl</span>
-                            </div>
+                        <div class="address">
+                            <i class="fa-solid fa-phone"></i>
+                            <span>07 021 363 12</span>
+                        </div>
+                        <div class="addres">
+                            <i class="fa-regular fa-envelope"></i>
+                            <span>info@copiatek.nl</span>
                         </div>
                     </div>
+                </div>
+                <div class="footer-menus">
                     <div class="menu">
                         <div class="menu-header">Company</div>
                         <div class="menu-item">Home</div>
@@ -147,9 +146,7 @@
                         <div class="menu-item">Working on value</div>
                         <div class="menu-item">We build for you</div>
                     </div>
-                </div>
-                <div class="menu-row-2">
-                    <div style="grid-column: 1/3; grid-column: 2;" class="menu">
+                    <div class="menu">
                         <div class="menu-header">Our work</div>
                         <div class="menu-item">Attendess</div>
                         <div class="menu-item">Partners</div>
@@ -171,20 +168,20 @@
                         <div class="menu-item">Cookies</div>
                         <div class="menu-item">Contact</div>
                     </div>
+                    
                 </div>
             </div>
         </div>
-        <div class="rights">
-            <div class="rights-content">
-                <div class="license">
-                    <span>© 2023 Copiatek. All rights reserved.</span>
-                </div>
-                <div class="links">    
-                    <i class="fa-brands fa-facebook nav-ic"></i>
-                    <i class="fa-brands fa-linkedin nav-ic"></i>
+        <div class="footer-bottom">
+            <div class="bottom-container">
+                <div class="rights"><span>© 2023 Copiatek. All rights reserved.</span></div>
+                <div class="footer-icons">
+                    <i class="fa-brands fa-facebook footer-ic"></i>
+                    <i class="fa-brands fa-linkedin footer-ic"></i>
                 </div>
             </div>
         </div>
-    </footer>
+   </footer>
+   
 </body>
 </html>
